# chamoix-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  Todo.md  ]  compile.bat  compile.sh  todo.md
.external/: CMakeLists.txt
.external/imgui/: CMakeLists.txt
cmx/: CMakeLists.txt  cmx_actor.cpp  cmx_actor.h  cmx_assets_manager.cpp  cmx_assets_manager.h  cmx_billboard_component.cpp  cmx_billboard_component.h  cmx_billboard_render_system.cpp  cmx_billboard_render_system.h  cmx_buffer.cpp  cmx_buffer.h  cmx_camera.cpp  cmx_camera.h  cmx_camera_component.cpp  cmx_camera_component.h  cmx_component.cpp  cmx_component.h  cmx_defines.h  cmx_descriptors.cpp  cmx_descriptors.h  cmx_device.cpp  cmx_device.h  cmx_edge_render_system.cpp  cmx_edge_render_system.h  cmx_editor.cpp  cmx_editor.h  cmx_editor_render_system.cpp  cmx_editor_render_system.h  cmx_frame_info.h  cmx_game.cpp  cmx_game.h  cmx_graphics_manager.cpp  cmx_graphics_manager.h  cmx_hud_component.cpp  cmx_hud_component.h  cmx_hud_render_system.cpp  cmx_hud_render_system.h  cmx_input_action.cpp  cmx_input_action.h  cmx_input_manager.cpp  (+60 more)
cmx/core/: CMakeLists.txt  cmx_game.cpp  cmx_game.h  cmx_scene.cpp  cmx_scene.h  cmx_transform.cpp  cmx_transform.h
cmx/core/actors/: CMakeLists.txt  cmx_actor.cpp  cmx_actor.h  cmx_physics_actor.cpp  cmx_physics_actor.h  cmx_point_light_actor.h
cmx/core/components/: CMakeLists.txt  cmx_billboard_component.cpp  cmx_billboard_component.h  cmx_camera_component.cpp  cmx_camera_component.h  cmx_component.cpp  cmx_component.h  cmx_hud_component.cpp  cmx_hud_component.h  cmx_mesh_component.cpp  cmx_mesh_component.h  cmx_physics_component.cpp  cmx_physics_component.h  cmx_point_light_component.cpp  cmx_point_light_component.h
cmx/core/inputs/: CMakeLists.txt  cmx_input_action.cpp  cmx_input_manager.cpp  cmx_input_manager.h
cmx/core/physics/: CMakeLists.txt  cmx_bounds.cpp  cmx_bounds.h  cmx_physics.h  cmx_physics_body.cpp  cmx_physics_body.h  cmx_physics_manager.cpp  cmx_physics_manager.h  cmx_physics_util.h  cmx_shapes.cpp  cmx_shapes.h
cmx/editor/: CMakeLists.txt  cmx_editor.cpp  cmx_editor.h  cmx_sink.h  cmx_viewport_actor.cpp  cmx_viewport_actor.h  cmx_viewport_ui.cpp  cmx_viewport_ui.h  cmx_viewport_ui_component.cpp  cmx_viewport_ui_component.h
cmx/misc/: CMakeLists.txt  cmx_math.h  cmx_register.cpp  cmx_register.h  cmx_utils.h
cmx/rendering/: CMakeLists.txt  cmx_camera.cpp  cmx_drawable.cpp  cmx_drawable.h  cmx_frame_info.h  cmx_g_buffer.cpp  cmx_g_buffer.h  cmx_graphics_manager.cpp  cmx_graphics_manager.h  cmx_light_environment.cpp  cmx_light_environment.h  cmx_render_system.cpp  cmx_render_system.cpp~  cmx_render_system.h  cmx_renderer.cpp  cmx_renderer.h
cmx/rendering/assets/: CMakeLists.txt  cmx_assets_manager.cpp  cmx_assets_manager.h  cmx_material.cpp  cmx_material.h  cmx_model.cpp  cmx_model.h  cmx_texture.cpp  cmx_texture.h
cmx/rendering/assets/custom/: CMakeLists.txt  cmx_post_blur_material.cpp  cmx_post_blur_material.h  cmx_post_composite_material.cpp  cmx_post_composite_material.h  cmx_post_ssao_material.cpp  cmx_post_ssao_material.h
cmx/rendering/render-systems-temp/: cmx_billboard_render_system.cpp  cmx_billboard_render_system.h  cmx_edge_render_system.h  cmx_hud_material.cpp  cmx_hud_material.h  cmx_hud_render_system.cpp  cmx_shaded_render_system.cpp  cmx_shaded_render_system.h
cmx/rendering/vulkan-utils/: CMakeLists.txt  cmx_buffer.cpp  cmx_debug_util.h  cmx_descriptors.cpp  cmx_descriptors.h  cmx_device.cpp  cmx_device.h  cmx_pipeline.cpp  cmx_pipeline.h  cmx_render_pass.cpp  cmx_render_pass.h  cmx_swap_chain.cpp  cmx_swap_chain.h  cmx_window.h
cmx/systems/: CMakeLists.txt
cmx/systems/assets/: CMakeLists.txt  cmx_assets_manager.cpp  cmx_assets_manager.h
cmx/systems/game/: CMakeLists.txt  cmx_actor.cpp  cmx_actor.h  cmx_component.cpp  cmx_component.h  cmx_game.cpp  cmx_game.h  cmx_scene.cpp  cmx_scene.h  cmx_transform.cpp  cmx_transform.h  cmx_world.cpp  cmx_world.h
cmx/systems/inputs/: CMakeLists.txt  cmx_input_action.cpp  cmx_input_action.h  cmx_input_manager.cpp  cmx_input_manager.h  cmx_inputs.cpp  cmx_inputs.h
cmx/systems/misc/: cmx_registers.h
cmx/systems/rendering/: CMakeLists.txt  cmx_buffer.cpp  cmx_buffer.h  cmx_camera_component.cpp  cmx_camera_component.h  cmx_default_render_system.cpp  cmx_default_render_system.h  cmx_descriptors.cpp  cmx_descriptors.h  cmx_device.cpp  cmx_device.h  cmx_frame_info.h  cmx_graphics_manager.cpp  cmx_graphics_manager.h  cmx_mesh_actor.h  cmx_mesh_component.cpp  cmx_mesh_component.h  cmx_model.cpp  cmx_model.h  cmx_pipeline.cpp  cmx_pipeline.h  cmx_render_component.cpp  cmx_render_component.h  cmx_render_system.cpp  cmx_render_system.h  cmx_renderer.cpp  cmx_renderer.h  cmx_swap_chain.h  cmx_utils.h  cmx_window.cpp  cmx_window.h
demo/: CMakeLists.txt  demo_game.cpp  demo_game.h  dynamic_body_actor.cpp  dynamic_body_actor.h  first_person_actor.cpp  first_person_actor.h  main.cpp  rigid_body_actor.cpp  rigid_body_actor.h  rotating_actor.cpp  rotating_actor.h  static_body_actor.cpp  static_body_actor.h
demo/.editor/: temp.xml
demo/properties/: input-manager.xml
demo/scenes/: demo-scene.xml  sponza-shaded.xml  sponza.xml
descent/: CMakeLists.txt  bullet_actor.cpp  bullet_actor.h  descent_game.cpp  descent_game.h  enemy_ship_actor.cpp  enemy_ship_actor.h  gun_component.cpp  gun_component.h  main.cpp  room_actor.cpp  room_actor.h  ship_actor.cpp  ship_actor.h  ship_camera_component.cpp  ship_camera_component.h  wall_actor.cpp  wall_actor.h
descent/.editor/: temp.xml
descent/assets/models/: enemy-ship.mtl
descent/properties/: input-manager.xml
descent/scenes/: gym-scene.xml
editor/: shortcuts.xml
petanque/: CMakeLists.txt  ball_actor.h  boule_actor.cpp  boule_actor.h  first_person_actor.cpp  first_person_actor.h  main.cpp  petanque_game.cpp  petanque_game.h  rigid_body_actor.cpp  rigid_body_actor.h  static_body_actor.cpp  static_body_actor.h
petanque/assets/models/: boule-de-petanque.mtl
petanque/properties/: input-manager.xml
petanque/scenes/: demo-scene.xml  field.xml
(+481 files in other folders)
